# sigscale-actor-rating

./: .gitignore  Cargo.toml  README.md  rate.sh  wasmcloud.toml
src/: lib.rs
